接口的编写

--- a/client/my-blog/src/assets/css/music/comment.scss
+++ b/client/my-blog/src/assets/css/music/comment.scss
@@ -60,6 +60,9 @@
                                 color: #a35c8f;
                             }
                         }
+                        span{
+                            // user-select: none;
+                        }
                     }
                 }
 
