client add article and comment

--- a/client/src/assets/css/music/comment.scss
+++ b/client/src/assets/css/music/comment.scss
@@ -1,8 +1,8 @@
-#comment {
+#music-comment {
     display: flex;
     flex-direction: column;
 
-    .comment {
+    .music-comment {
         margin-top: 50px;
         width: 300px;
 
