--- a/client/src/assets/css/music/mucplay.scss
+++ b/client/src/assets/css/music/mucplay.scss
@@ -10,6 +10,7 @@
             width: 180px;
             height: 180px;
             margin: 0 auto;
+
             img {
                 width: 100%;
                 height: 100%;
@@ -20,18 +21,20 @@
 
     .music-lyric {
         margin-top: 20px;
-        text-align: center;
         margin-bottom: 15px;
+        height: 200px;
+        overflow: hidden;
 
         ul {
             list-style: none;
+            text-align: center;
             padding: 0;
             margin: 0;
-            height: 200px;
-            overflow: hidden;
+            transition: margin-top 0.7s;
 
             .lyric-list {
-                margin: 7px;
+                height: 35px;
+                line-height: 35px;
             }
         }
     }
