--- a/client/src/assets/css/music/music.scss
+++ b/client/src/assets/css/music/music.scss
@@ -6,13 +6,14 @@
 
     .music-sing {
         // box-sizing: border-box;
-        width: 300px;
-        height: 300px;
+        width: 150px;
+        height: 400px;
         border: 1px solid;
-        border-radius: 50%;
+        border-radius: 12px;
         margin: 50px;
         margin-bottom: 40px;
-        margin-left: 150px;
+        margin-left: 200px;
+        padding: 0 20px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,11 +37,13 @@
 
                 &:hover {
                     color: #2f90b9;
+                    background: #fff;
                 }
             }
         }
     }
 
+    // 音乐评论
     .music-comment {
         .music-content {
             width: 300px;
