--- a/client/src/assets/css/music/mucplay.scss
+++ b/client/src/assets/css/music/mucplay.scss
@@ -36,6 +36,9 @@
                 height: 35px;
                 line-height: 35px;
             }
+            .lyric-list.active{
+                color: #fff;
+            }
         }
     }
 
