--- a/client/src/assets/css/music/mucplay.scss
+++ b/client/src/assets/css/music/mucplay.scss
@@ -1,5 +1,6 @@
 .mucplay {
-    margin: 50px;
+    margin-top: 50px;
+    width: 520px;
     border: 1px solid;
     padding: 20px;
     background: #eea2a4;
@@ -32,18 +33,19 @@
             margin: 0;
             transition: margin-top 0.7s;
 
-            .lyric-list {
+            li {
                 height: 35px;
                 line-height: 35px;
             }
-            .lyric-list.active{
+            li.active{
                 color: #fff;
             }
         }
     }
 
     .music-progress {
-        width: 220px;
+        // width: 220px;
+        width: 100%;
         height: 20px;
         display: flex;
         justify-content: center;
@@ -51,6 +53,7 @@
 
         .play {
             margin-right: 1px;
+            cursor: pointer;
 
             i {
                 font-size: 18px;
@@ -58,31 +61,33 @@
         }
 
         .progress-bar {
-            width: 180px;
+            // width: 180px;
+            width: 100%;
             height: 6px;
             border: 2px solid;
             border-radius: 5px;
             background: #c02c38;
             position: relative;
             box-shadow: 0 0 5px;
+            cursor: pointer;
 
             .bar-move {
-                width: 30%;
+                width: 0;
                 height: 100%;
                 background: #eea2a4;
                 border-radius: 5px;
             }
 
-            .bar-circle {
-                position: absolute;
-                left: 45px;
-                top: -1px;
-                width: 6px;
-                height: 6px;
-                border: 1px solid;
-                border-radius: 50%;
-                background: #fff;
-            }
+            // .bar-circle {
+            //     position: absolute;
+            //     left: 0px;
+            //     top: -1px;
+            //     width: 6px;
+            //     height: 6px;
+            //     border: 1px solid;
+            //     border-radius: 50%;
+            //     background: #fff;
+            // }
         }
 
         .progress-time {
