--- a/client/src/assets/css/music/music.scss
+++ b/client/src/assets/css/music/music.scss
@@ -6,13 +6,14 @@
 
     .music-sing {
         // box-sizing: border-box;
-        width: 150px;
+        width: 250px;
         height: 400px;
         border: 1px solid;
         border-radius: 12px;
-        margin: 50px;
+        margin-top: 50px;
+        margin-left: 10px;
         margin-bottom: 40px;
-        margin-left: 200px;
+        // margin-left: 200px;
         padding: 0 20px;
         display: flex;
         justify-content: center;
