--- a/client/src/assets/css/music/music.scss
+++ b/client/src/assets/css/music/music.scss
@@ -7,14 +7,14 @@
     .music-sing {
         // box-sizing: border-box;
         width: 250px;
-        height: 400px;
+        // height: 400px;
         border: 1px solid;
         border-radius: 12px;
         margin-top: 50px;
         margin-left: 10px;
         margin-bottom: 40px;
         // margin-left: 200px;
-        padding: 0 20px;
+        // padding: 0 20px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -24,12 +24,18 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            padding: 20px 0;
+            height: 300px;
+            box-sizing: border-box;
+            overflow: hidden;
 
             .music-item {
-                display: block;
                 margin: 10px 0;
                 width: 150px;
-                padding: 10px 0;
+                // padding: 10px 0;
+                height: 35px;
+                line-height: 35px;
+                padding: 0 20px;
                 border-radius: 20px;
                 background: #475164;
                 text-align: center;
