--- a/client/src/assets/css/music/mucplay.scss
+++ b/client/src/assets/css/music/mucplay.scss
@@ -41,6 +41,10 @@
                 color: #fff;
             }
         }
+        .nomusic{
+            text-align: center;
+            font-size: 18px;
+        }
     }
 
     .music-progress {
