--- a/client/src/assets/css/article/article.scss
+++ b/client/src/assets/css/article/article.scss
@@ -1,44 +1,40 @@
 .article {
-    .container {
-        width: 800px;
-        margin: 70px auto;
+    width: 7rem;
+    margin: 0.7rem auto;
+    box-sizing: border-box;
 
-        .title {
-            text-align: center;
-            font-size: 26px;
-        }
+    .container {
+        width: 100%;
 
         .content {
-            list-style: none;
-            width: 600px;
+            width: 5rem;
             margin: 0 auto;
-            padding: 20px;
 
-            // .article-time {
-            //     color: #6e7ab5;
-            //     margin-left: 10px;
-            //     padding: 20px 0 5px 0;
-            // }
+            box-sizing: border-box;
 
-            .article-info {
+            .article-list {
                 padding: 0;
                 margin: 0;
+                padding: 0.2rem;
                 list-style: none;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
 
                 li {
                     position: relative;
                     display: flex;
                     box-sizing: border-box;
-                    margin-left: 20px;
-                    padding: 10px 0;
+                    margin-left: 10px;
+                    padding: 20px 0;
 
                     .item-l {
                         margin-right: 15px;
 
                         .img {
-                            width: 50px;
-                            height: 50px;
-                            padding: 4px;
+                            width: 45px;
+                            height: 45px;
+                            line-height: 45px;
 
                             img {
                                 width: 100%;
@@ -57,7 +53,7 @@
                             margin: 0;
                             color: #5b6773;
                             font-size: 15px;
-                          
+
 
                             &:nth-child(1) {
                                 position: absolute;
